# yamps

./: .env  Cargo.toml  README.md  config.toml  sqlx-data.json
migrations/: 20220413220533_Initial_migration.sql
src/: 404.html  error.html  index.html  main.rs  paste.html  paste_head.html
src/migrations/: 20220413194816_database_migration.sql
