[package]
name = "yet_another_minecraft_paste_site"
version = "0.1.0"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
edition = "2021"
description = "Simple pastebin website. Made for minecraft logs, supports anything."
readme = "README.md"
repository = "https://github.com/randomairborne/yamps"
license = "MIT"

[dependencies]
axum = { version = "0.5", features = ["http2", "multipart"] }
axum_static_macro = "1.1"
chrono = "0.4"
once_cell = "1.10"
random-string = "1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["postgres", "chrono", "macros", "runtime-tokio-rustls", "tls", "macros", "migrate", "tls"], default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev.package.sqlx-macros]
opt-level = 3

